<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="crop__done">DONE</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="instabug_audio_recorder_permission_denied">Audio recording permission denied</string>
    <string name="instabug_err_invalid_comment">Please enter a valid comment</string>
    <string name="instabug_err_invalid_email">Please enter a valid email</string>
    <string name="instabug_external_storage_permission_denied">Storage permission denied</string>
    <string name="instabug_str_add_photo">Select Image from Gallery</string>
    <string name="instabug_str_bug_comment_hint">What went wrong?</string>
    <string name="instabug_str_bug_header">Report a Problem</string>
    <string name="instabug_str_cancel">Cancel</string>
    <string name="instabug_str_conversations">Conversations</string>
    <string name="instabug_str_email_hint">Enter your Email</string>
    <string name="instabug_str_empty" />
    <string name="instabug_str_feedback_comment_hint">How can we improve?</string>
    <string name="instabug_str_feedback_header">Suggest an Improvement</string>
    <string name="instabug_str_hold_to_record">Press and Hold to Record</string>
    <string name="instabug_str_invocation_header">Help &amp; Feedback</string>
    <string name="instabug_str_next">Next</string>
    <string name="instabug_str_notification_title"> Team</string>
    <string name="instabug_str_notifications_body">%1$d new messages from %2$s and others</string>
    <string name="instabug_str_ok">OK</string>
    <string name="instabug_str_pbi">Powered by Instabug.com</string>
    <string name="instabug_str_please_wait">Please wait a moment</string>
    <string name="instabug_str_record_audio">Record a Voice Note</string>
    <string name="instabug_str_release_stop_record">Release to Attach</string>
    <string name="instabug_str_shake_hint">We love to hear your feedback&lt;br/&gt;&lt;b&gt;Shake&lt;/b&gt; your device to talk to us.</string>
    <string name="instabug_str_submit">Send</string>
    <string name="instabug_str_swipe_hint">We love to hear your feedback&lt;br /&gt;&lt;b&gt;Swipe with 2 fingers&lt;/b&gt; to talk to us.</string>
    <string name="instabug_str_thank_you">We\'ve received your feedback.\nThank you for helping us make %s better.</string>
    <string name="instabug_str_capture">Capture</string>
    <string name="instabug_str_take_screenshot">Take Screenshot</string>
    <string name="AnnotationCannotConvertNullX">Cannot convert null X value for annotation.</string>
    <string name="AnnotationCannotConvertNullY">Cannot convert null Y value for annotation.</string>
    <string name="AnnotationCannotHaveNullX">Annotation cannot have a null X Axis.</string>
    <string name="AnnotationCannotHaveNullY">Annotation cannot have a null Y axis.</string>
    <string name="AnnotationCannotHaveSameXY">Annotation cannot have the same axis for both X and Y.</string>
    <string name="AnnotationMustBeOnSameChart">The axes an annotation is associated with must belong to the same chart the annotation is on.</string>
    <string name="AxisDataPointsNotNull">You must supply all DataPoint parameter arguments, non-null</string>
    <string name="AxisDefaultRangeInternalIsEmpty">Cannot set default range due to transformations applied to this axis: have you set skip ranges that completely cover the data or default ranges?</string>
    <string name="AxisDefaultRangeIsEmpty">Cannot set a default range with equal minimum and maximum values.</string>
    <string name="AxisInsufficientWidth">Axis width does not provide enough space to fit the tickmarks and ticklabels.</string>
    <string name="AxisNullCustomTickMarkValues">Custom tick mark values cannot contain null.</string>
    <string name="AxisNullMajorTickFrequency">Null currentMajorTickFrequency</string>
    <string name="AxisRangeNotSetPixelCall">Calling getUserValueForPixelValue before an axisRange has been set.</string>
    <string name="AxisRangeNotSetUserCall">Calling getPixelValueForUserValue before an axisRange has been set.</string>
    <string name="AxisUndefinedRange">The axis has an undefined data range and cannot be displayed</string>
    <string name="__bu_blinkup_desc">After tapping \"Send BlinkUp\", hold the screen close to the blinking red light on the device until the flashing ends (about 10 seconds).</string>
    <string name="__bu_blinkup_footer">BlinkUp technology provided by Electric Imp</string>
    <string name="__bu_clear_device_settings">Clear device settings</string>
    <string name="__bu_clear_wireless">Clear Wireless Configuration</string>
    <string name="__bu_password">Password</string>
    <string name="__bu_remember_password">Remember Password</string>
    <string name="__bu_send_blinkup">Send BlinkUp</string>
    <string name="__bu_show_password">Show Password</string>
    <string name="__bu_ssid">WiFi network name</string>
    <string name="__bu_wps_info">To join without using a PIN, press the WPS button on your router and then BlinkUp within 60 seconds.</string>
    <string name="__bu_wps_pin">WPS PIN (Optional)</string>
    <string name="action_ime_register">Register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign In</string>
    <string name="app_version">Version 2.8–236</string>
    <string name="blinkup_connect_wifi_2_bottom_label">Make sure your smartphone is connected to the same Wi-Fi network you want to connect your Iro to.</string>
    <string name="blinkup_connect_wifi_2_network_name">Not Connected</string>
    <string name="blinkup_connect_wifi_2_network_name_label">Network Name</string>
    <string name="blinkup_connect_wifi_2_top_label">Step Two</string>
    <string name="blinkup_next_button">Next Step</string>
    <string name="blinkup_no_device_add_button">Add a device</string>
    <string name="blinkup_no_device_header">You do not have a Rachio controller associated with your account yet.</string>
    <string name="blinkup_no_device_instruction">Don\'t have a Rachio controller?\nVisit www.rachio.com to order yours today.</string>
    <string name="blinkup_no_device_sign_out_button">Sign Out</string>
    <string name="blinkup_update_network_button">Update Network</string>
    <string name="device_settings_master_valve_row">Master Valve/Pump</string>
    <string name="device_settings_master_valve_text">Switch Master Valve/Pump to the ON position if you connected a master valve/pump to the blue terminal on your Iro.</string>
    <string name="device_settings_rain_sensor_row">Connected Rain Sensor</string>
    <string name="device_settings_rain_sensor_text">Switch Connected Rain Sensor to the ON position if you connected a rain sensor to a yellow terminal on your Iro.</string>
    <string name="device_settings_sensor1_row">Sensor 1</string>
    <string name="device_settings_sensor2_row">Sensor 2</string>
    <string name="device_settings_waterhammer_text">Enable this setting if your pipes make a banging noise every time a sprinkler valve opens.</string>
    <string name="dialog_device_name_geolocation_button">UPDATE MY CURRENT LOCATION</string>
    <string name="dialog_device_name_geolocation_header">GEOGRAPHIC LOCATION</string>
    <string name="dialog_device_name_name_header">DEVICE NAME</string>
    <string name="dialog_device_name_zip_header">ZIP CODE</string>
    <string name="forgotpassword">Forgot your password?</string>
    <string name="nozzleconfiguration_brand">BRAND/MANUFACTURER</string>
    <string name="nozzleconfiguration_model">MODEL</string>
    <string name="nozzleconfiguration_name">Name</string>
    <string name="nozzleconfiguration_optional">Optional</string>
    <string name="nozzleconfiguration_precip">PRECIP</string>
    <string name="nozzleconfiguration_type">TYPE</string>
    <string name="prompt_email">Username or email</string>
    <string name="prompt_emailemail">Email</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="zone_help_info_1">Customize each of your zones so your controller can better predict when and where to water.</string>
    <string name="zone_help_info_2">We\'ll start by running each zone individually. Tap Start when you\'re ready to begin.</string>
    <string name="zone_help_set_up_title">Set Up Zones</string>
    <string name="zone_help_start">Start</string>
</resources>