<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:scrollbarStyle="outsideInset" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/__bu_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <EditText android:id="@+id/__bu_wifi_ssid" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/__bu_ssid" android:inputType="none|text|textNoSuggestions|textUri|textPassword|textVisiblePassword">
            <requestFocus/>
        </EditText>
        <EditText android:id="@+id/__bu_wifi_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/__bu_password" android:inputType="textPassword"/>
        <CheckBox android:id="@+id/__bu_remember_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/__bu_remember_password"/>
        <CheckBox android:enabled="false" android:id="@+id/__bu_show_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/__bu_show_password"/>
        <TextView android:gravity="center" android:id="@+id/__bu_blinkup_desc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/__bu_padding" android:layout_marginRight="@dimen/__bu_padding" android:layout_marginBottom="@dimen/__bu_padding" android:text="@string/__bu_blinkup_desc"/>
        <Button android:id="@+id/__bu_blinkup_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/__bu_send_blinkup" android:onClick="sendBlinkup"/>
        <include layout="@layout/__bu_legacy_mode"/>
        <TextView android:gravity="bottom|center_vertical|center_horizontal|center" android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="@dimen/__bu_padding" android:text="@string/__bu_blinkup_footer" android:layout_weight="1.0"/>
    </LinearLayout>
</ScrollView>
