<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="@dimen/padding_general" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/blinkup_help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/blinkuphelp"/>
    <ImageView android:layout_gravity="center_horizontal" android:id="@+id/blinkup_iro_image" android:layout_width="@dimen/blinkupirosize" android:layout_height="@dimen/blinkupirosize" android:layout_marginTop="10dp" android:src="@drawable/iro_device"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/rachio_light_green" android:layout_gravity="center_horizontal" android:id="@+id/blinkup_add_iro" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/blinkup_connect_wifi_2_top_label"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/blinkup_connect_wifi_2_network_name_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/blinkup_connect_wifi_2_network_name_label"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center_horizontal" android:id="@+id/blinkup_connect_wifi_2_network_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/blinkup_connect_wifi_2_network_name"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/rachio_white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/blinkup_connect_wifi_2_bottom_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/blinkup_connect_wifi_2_bottom_label"/>
    <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1.0"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center_horizontal" android:id="@+id/connect_wifi_2_update_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/blinkup_update_network_button"/>
    <Button android:id="@+id/connect_wifi_2_next_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/blinkup_next_button"/>
</LinearLayout>
