<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:scrollbarStyle="outsideInset" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/__bu_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/__bu_clear_wifi_header" android:padding="@dimen/__bu_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/__bu_clear_device_settings" style="@style/BlinkUp.Header"/>
        <TextView android:gravity="center" android:id="@+id/__bu_blinkup_desc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/__bu_padding" android:layout_marginRight="@dimen/__bu_padding" android:layout_marginBottom="@dimen/__bu_padding" android:text="@string/__bu_blinkup_desc"/>
        <Button android:id="@+id/__bu_blinkup_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/__bu_clear_wireless" android:onClick="sendBlinkup"/>
        <include layout="@layout/__bu_legacy_mode"/>
        <TextView android:gravity="bottom|center_vertical|center_horizontal|center" android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="@dimen/__bu_padding" android:text="@string/__bu_blinkup_footer" android:layout_weight="1.0"/>
    </LinearLayout>
</ScrollView>
