<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/padding_general" android:layout_width="match_parent" android:layout_height="match_parent">
        <include layout="@layout/snippet_gen2_helpicon"/>
        <TextView android:text="@string/zone_help_set_up_title" style="@style/Gen2ProvTitle"/>
        <TextView android:textAppearance="@style/Rachio.TextAppearance.Medium" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/set_up_info_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_double" android:text="@string/zone_help_info_1"/>
        <TextView android:textAppearance="@style/Rachio.TextAppearance.Medium" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/set_up_info_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_quad" android:text="@string/zone_help_info_2"/>
        <Button android:enabled="false" android:id="@+id/start_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/zone_help_start"/>
    </LinearLayout>
    <ImageView android:layout_gravity="bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_double" android:src="@drawable/sprinkler_footer" android:scaleType="centerCrop"/>
</FrameLayout>
